--- a/app/src/main/res/layout/fragment_progress.xml
+++ b/app/src/main/res/layout/fragment_progress.xml
@@ -29,7 +29,7 @@
         android:id="@+id/rv_numbers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="invisible">
+        android:visibility="gone">
     </android.support.v7.widget.RecyclerView>
 
 
