--- a/app/src/main/res/layout/number_list_item.xml
+++ b/app/src/main/res/layout/number_list_item.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:padding="16dp">
-    
-    <TextView
-        android:id="@+id/tv_number_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|start"/>
+    android:padding="16dp"
+    android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tv_view_holder_number"
+        android:id="@+id/idTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|end"/>
-</FrameLayout>
+        android:layout_gravity="center_vertical|start" />
+
+    <TextView
+        android:id="@+id/fromCityTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
+
+</LinearLayout>
