--- a/app/src/main/res/layout/fragment_progress.xml
+++ b/app/src/main/res/layout/fragment_progress.xml
@@ -3,7 +3,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
+    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipe_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
 
     <android.support.v7.widget.RecyclerView
@@ -13,6 +16,6 @@
         android:visibility="gone">
     </android.support.v7.widget.RecyclerView>
 
-
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
